# wiki.koompi.org

./: Cargo.toml  Code of Conduct (Contributor).md  Code of Conduct (Maintainer).md  Contributor paper.md  LICENSE.md  README.md  index.html  menu.json  menu.md  menu.yaml  nav.html
.github/workflows/: koompiwiki.yml
content/en/: index.md  platforms.md
content/en/About_Us/: KOOMPI.md  KOOMPI_Wiki.md
content/en/Applications/: Development.md  Education.md  Graphic.md  Internet.md  Multimedia.md  Office.md  Overviews.md  System.md  web_browser.md
content/en/Commands/: Directory_file_management.md  _index.en.md  directory_file_management.md  install_remove_commands.md  introduction.md  manual_guide_command.md  navigation_command.md  password.md  power_management.md  system_command.md  users_groups.md
content/en/Contact/: index.md
content/en/Development/: Overview.md
content/en/Documentation/: KOOMPI_OS_PLAYBOOK.md
content/en/FAQs/: General.md  Technical.md
content/en/Interview/: index.md
content/en/Introduction/: Computer_Hardware.md
content/en/New_Release/: ISO.md  (+2 more)
content/kh/: index.md
menu/: en.md  kh.md
public/: en.404.html  kh.404.html  main.js
public/Images/: All in one.docx  BOOK LIBRE WRITER.odt  Flutter100.png.xmp  Group3_SE.docx  Group3_SE1.docx  Javascrip HomeWork.rar  Price.rar  book_emergency_06_11_2020_12_06.sla  english table contents.sla  html.docx  interfacekoompiwiki.png.xmp
public/css/: 404.css  style.css
src/: config.rs  generator.rs  handler.rs  main.rs  menu.rs
templates/: header.stpl  index.stpl  main.stpl  nav.stpl
(+124 files in other folders)
