[package]
name = "KOOMPI"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-rt = "1.1.1"
actix-files = "0.4.0"
actix-cors = "0.5.3"
sailfish = "0.2.2"
sailfish-macros = "0.2.2"
serde = { version = "1.0.117", features = ["derive"]}
serde_yaml = "0.8.14"
serde_json = "1.0.59"
walkdir = "2.3.1"
pulldown-cmark = "0.8.0"
html_parser = "0.4.2"